# advent-of-code-2023-rust

./: Cargo.toml  README.md
.github/workflows/: readme-stars.yml
src/template/: aoc_cli.rs  readme_benchmarks.rs  runner.rs
src/template/commands/: all.rs
