[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Jeff Hanke <geophree@gmail.com>", "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
itertools = "0.12.0"
once_cell = "1.18.0"
pico-args = "0.5.0"
range-set = "0.0.10"
regex = "1.10.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
# for this template:
must_use_candidate = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
# to fix in the future
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
